--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django>=4.2.7,<5.0
 djangorestframework>=3.14.0
 djangorestframework-simplejwt>=5.3.0
+setuptools>=69.0.0,<81
 Pillow>=10.3.0
 loguru>=0.7.2
 python-decouple>=3.8
